--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/control2_grupo3
+spring.datasource.username=postgres
+spring.datasource.password=holamundo
+spring.datasource.hikari.maximumPoolSize=10
+spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+server.port=8090
+
