--- a/front-grupo1-control2/package.json
+++ b/front-grupo1-control2/package.json
@@ -13,10 +13,10 @@
     "deepmerge": "^4.3.1",
     "leaflet": "^1.9.4",
     "sass": "^1.89.0",
-    "sass-loader": "^16.0.5",
+    "sass-loader": "^12.6.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
-    "vuetify": "^3.8.0-beta.0"
+    "vuetify": "^3.8.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
