--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/control2_grupo3
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=holamundo
 spring.datasource.hikari.maximumPoolSize=10
 spring.jpa.show-sql=true
 
