--- a/front-grupo1-control2/package.json
+++ b/front-grupo1-control2/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.9",
     "deepmerge": "^4.3.1",
     "leaflet": "^1.9.4",
     "sass": "^1.89.0",
     "sass-loader": "^12.6.0",
     "vue": "^3.5.15",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1",
     "vuetify": "^3.8.6"
   },
